--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npx nodemon src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.3",
     "nodemon": "^3.1.10"
