--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "start": "npx nodemon src/index.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.3",
+    "multer": "^2.0.0",
+    "multer-s3": "^3.0.1",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1"
